# vietnamese-asr-benchmark

./: .gitignore  FILE_INDEX.md  MANIFEST.in  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  pyproject.toml  requirements.txt  setup.py
configs/: dataset_profile.json
docs/: FILE_INDEX.md  INSTALLATION.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md
docs/guides/: ARCHITECTURE_REFACTORING.md  CONFIG_UTIL.md  HUGGINGFACE_INTEGRATION.md  NOTEBOOK_SUMMARY.md  QUICK_REFERENCE.md
docs/reports/: Dataset_Summary_VASR.md  Evaluation_Methods_Summary_VASR.md  Model_Summary_VASR.md
notebooks/: 00_custom_analysis_example.ipynb  00_huggingface_integration_example.ipynb  01_phowhisper_evaluation.ipynb  02_whisper_evaluation.ipynb  03_wav2vec2_evaluation.ipynb  04_wav2vn_evaluation.ipynb  05_cross_model_comparison.ipynb  custom_analysis_example.ipynb  huggingface_integration_example.ipynb
notebooks/colab/: 01_phowhisper_evaluation_colab.ipynb  02_whisper_evaluation_colab.ipynb  03_wav2vec2_evaluation_colab.ipynb  04_wav2vn_evaluation_colab.ipynb  05_cross_model_comparison_colab.ipynb
scripts/: check_setup.py  demo.py  fetch_datasets.py  main_evaluation.py
src/: __init__.py  dataset_loader.py  metrics.py  model_evaluator.py  notebook_utils.py  visualization.py
tests/: __init__.py
