[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "vietnamese-asr-benchmark"
version = "1.0.0"
description = "A comprehensive framework for evaluating Vietnamese Automatic Speech Recognition models"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vietnamese ASR Evaluation Team"},
]
keywords = [
    "speech recognition",
    "ASR",
    "Vietnamese",
    "evaluation",
    "metrics",
    "WER",
    "CER",
    "transformers",
    "whisper",
    "wav2vec2",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "jiwer>=3.0.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "accelerate>=0.20.0",
    "huggingface_hub",
    "datasets",
    "kaggle",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "isort>=5.10.0",
    "mypy>=0.950",
    "jupyter>=1.0.0",
    "ipython>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/quangnt03/vietnamese-asr-benchmark"
"Bug Tracker" = "https://github.com/quangnt03/vietnamese-asr-benchmark/issues"
Documentation = "https://github.com/quangnt03/vietnamese-asr-benchmark#readme"
"Source Code" = "https://github.com/quangnt03/vietnamese-asr-benchmark"

[project.scripts]
vietnamese-asr-benchmark-eval = "scripts.main_evaluation:main"
vietnamese-asr-benchmark-demo = "scripts.demo:run_demo"
vietnamese-asr-benchmark-fetch = "scripts.fetch_datasets:main"
vietnamese-asr-benchmark-check = "scripts.check_setup:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | \.tox
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=vietnamese-asr-benchmark --cov-report=term-missing --cov-report=html"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
